--- a/css/agency.css
+++ b/css/agency.css
@@ -173,11 +173,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  background-size: cover;
+  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("../img/header-bg.jpg") no-repeat center center fixed;
 }
 
 header.masthead .intro-text {
