--- a/css/agency.css
+++ b/css/agency.css
@@ -9,6 +9,10 @@ body {
   font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+.img-fluid {
+    height: 250px !important;
+}
+
 p {
   line-height: 1.75;
 }
