--- a/css/agency.css
+++ b/css/agency.css
@@ -173,7 +173,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("../img/header-bg.jpg") no-repeat center center fixed;
+  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("../img/portfolio/nanos-world-02.jpg") no-repeat center center fixed;
 }
 
 header.masthead .intro-text {
