--- a/css/agency.css
+++ b/css/agency.css
@@ -173,7 +173,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("../img/portfolio/nanos-world-02.jpg") no-repeat center center fixed;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25) ), url("../img/portfolio/header.jpg") no-repeat center center fixed;
 }
 
 header.masthead .intro-text {
@@ -231,7 +231,7 @@ header.masthead .intro-text .intro-heading {
 #portfolio .portfolio-item .portfolio-link {
   position: relative;
   display: block;
-  max-width: 400px;
+  max-width: 550px;
   margin: 0 auto;
   cursor: pointer;
 }
@@ -242,7 +242,7 @@ header.masthead .intro-text .intro-heading {
   height: 100%;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(254, 209, 54, 0.5);
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -270,11 +270,12 @@ header.masthead .intro-text .intro-heading {
 }
 
 #portfolio .portfolio-item .portfolio-caption {
-  max-width: 400px;
+  max-width: 550px;
   margin: 0 auto;
-  padding: 25px;
+  padding: 15px;
   text-align: center;
   background-color: #fff;
+  min-height: 125px;
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
@@ -283,7 +284,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
-  font-size: 16px;
+  font-size: 14px;
   font-style: italic;
   margin: 0;
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
